# kiwi

./: .gitignore  BUILD.sh  CMakeLists (copie).txt  CMakeLists.txt  INITIALIZE.sh  README  README.md  REBUILD.sh  TEST.sh  TODO  index.html
cpp/: BUILD.sh  CMakeLists.txt  REBUILD.sh  TEST.sh
cpp/src/Qiwi/: BezierCurveView.cpp  BezierCurveView.hpp  Commons.cpp  NodeLinkView.cpp  NodeLinkView.hpp  NodePortView.cpp  NodeView.hpp  Qiwi.pro  QiwiMainWindow.hpp  QiwiMainWindow.ui  TemporaryPortView.hpp
cpp/src/glWidget/: CMakeLists.txt  NodeWidget.cpp  NodeWidget.hpp
cpp/src/glview/: CMakeLists.txt  NodeView.cpp  NodeView.hpp
cpp/src/kiwi/: CMakeLists.txt  SConstruct
cpp/src/software/: ArgumentProcessor.hpp  SimpleFilterProcessor.cpp  SimpleFilterProcessor.hpp  TelnetRequestParser.cpp  TelnetRequestParser.hpp  TelnetServer.cpp  TelnetServer.hpp
cpp/test/: CMakeLists.txt  SConstruct  glWidget.cpp  test.cpp
cpp/test/audio/: CMakeLists.txt  testAudioSampleBuffer.cpp
cpp/test/core/: Algorithm_Test.cpp  ContainerManagerTest.cpp  Container_Test.cpp  DumbContainer.hpp  DumbFilter.hpp  DynamicPortTest.cpp  Misc_Test.cpp  NodeTypeManager_Test.cpp  Node_Test.cpp  PipelineManager_Test.cpp  Pipeline_Test.cpp  TypeId_Test.cpp
cpp/test/mpl/: ApplyBitwiseOperatorTest.cpp  FillTypeListTest.cpp  IsRelatedTest.cpp  NumberTest.cpp  TupleTest.cpp
cpp/test/utils/: DebugStreamTest.cpp
d/: ALL.sh  BUILD.sh  BUILD_TEST.sh  CMakeLists.txt  CORE.sh  EXTERN.sh  IMAGE.sh  INCLUDES.sh  SConstruct  TEST.sh  TEXT.sh
d/src/: CMakeLists.txt  OutputStreamTest.d  test.d
d/src/kiwi/: commons.d  core.d  data.d  main.d
d/test/: CMakeLists.txt  core.d  text.d
engine/: CMakeLists.txt  readme.txt
engine/src/: CMakeLists.txt
engine/src/core/: AbstractPipeline.hpp  Commons.hpp  Container.hpp  Filter.hpp  InputPort.ih  ModuleSRC.txt  Node.cpp  Node.hpp  Node.ih  OutputPort.cpp  OutputPort.ih  Pipeline.hpp  Pipeline.ih  Resource.hpp  Resource.ih  SimplePipeline.cpp  SimplePipeline.hpp
engine/src/generic/: AbstractArrayContainer.hpp  ArrayContainer.hpp  ArrayContainer.ih  ArrayIterator.hpp  ArrayIterator.ih  ArrayReader.hpp  ArrayReader.ih  ArrayResource.hpp  ArrayWriter.hpp  ArrayWriter.ih  GaussianBlur.hpp  GaussianBlur.ih  GenericIterator.hpp  IterativeFilter.hpp  IterativeFilter.ih  ModuleSRC.txt  MultiArrayContainer.hpp  MultiArrayContainer.ih  Point.hpp  Point.ih  SimpleValue.hpp  ValueContainer.hpp
engine/src/image/: Contrast.hpp  Contrast.ih
engine/src/text/: AbstractTextContainer.hpp  StringContainer.hpp  TextReader.cpp  TextReader.hpp  TextWriter.cpp  TextWriter.hpp
engine/src/utils/: DebugOutputStream.hpp  types.hpp
engine/test/: CMakeLists.txt  TestSuite.cpp
engine/test/core/: FilterTest.hpp  MetaFilterTest.hpp  SimplePipelineTest.cpp
engine/test/generic/: ArrayContainerTest.hpp  MultiArrayContainerTest.hpp  PointTest.hpp  ValueContainerTest.hpp
engine/test/image/: CMakeLists.txt  CairoImageContainerTest.cpp  CairoImageContainerTest.hpp
image/test/: CMakeLists.txt
src/: CMakeLists.txt
src/Qiwi/: Commons.hpp  NodeLinkView.cpp  NodeLinkView.hpp  NodePortView.cpp  NodePortView.hpp  NodeView.cpp  NodeView.hpp  Qiwi.pro  QiwiMainWindow.cpp  QiwiMainWindow.hpp  QiwiMainWindow.ui  TemporaryPortView.cpp  TemporaryPortView.hpp  main.cpp
src/audio/: AudioBuffer.ih  AudioSampleBuffer.hpp  AudioSampleBuffer.ih  AudioSampleIterator.hpp  ModuleSRC.txt
src/cmdkiwi/: CMakeLists.txt  kiwi.cpp
src/core/: Commons.hpp  DebugOutputStream.hpp  Filter.hpp  GenericIterator.hpp  ModuleSRC.txt  Pipeline.hpp  Pipeline.ih  Resource.hpp  Resource.ih
src/generic/: ArrayContainer.hpp  ArrayContainer.ih  ArrayData.hpp  ArrayData.ih  ArrayDataReader.hpp  ArrayDataReader.ih  ArrayDataWriter.hpp  ArrayDataWriter.ih  ArrayIterator.hpp  ArrayIterator.ih  ArrayReader.hpp  ArrayReader.ih  ArrayWriter.hpp  ArrayWriter.ih  GenericIterator.hpp  ModuleSRC.txt  Point.hpp  SimpleValue.hpp
src/image/: ArrayImageData.hpp  ArrayImageData.ih  ModuleSRC.txt  Point.hpp  image.hpp
src/kiwi/: CMakeLists.txt  SConstruct  config.hpp  core.hpp  generic.hpp  text.hpp
src/software/: ArgumentProcessor.cpp  ArgumentProcessor.hpp  CMakeLists.txt  Help.hpp  InputWrapper.hpp  SimpleFilterProcessor.cpp  SimpleFilterProcessor.hpp  TelnetRequestParser.cpp  TelnetRequestParser.hpp  TelnetServer.cpp  TelnetServer.hpp  kiwiLauncher.cpp  printMessages.h
src/utils/: DebugOutputStream.hpp  types.hpp
test/: CMakeLists.txt  SConstruct  TestSuite.cpp  all.cpp  test.cpp  testFilter.cpp  testPoint.cpp  test_arithmetic.cpp
test/audio/: testAudioSampleBuffer.cpp
test/core/: CMakeLists.txt  ContainerManagerTest.cpp  ContainerTest.cpp  FactoryTest.cpp  FactoryTest.hpp  FilterTest.cpp  FilterTest.hpp  MetaFilterTest.cpp  MetaFilterTest.hpp  NodeTest.cpp  NodeTest.hpp  PipelineTest.hpp  PortTest.cpp  StaticNodeTest.cpp  TagTest.cpp  TestFilter.cpp  testFilter.cpp
test/generic/: ArrayContainerTest.cpp  ArrayContainerTest.hpp  MultiArrayContainerTest.cpp  MultiArrayContainerTest.hpp  NumberContainerTest.cpp  PointTest.cpp  PointTest.hpp  PointVectorContainerTest.cpp  RectangleContainerTest.cpp  StructuredArrayContainerTest.cpp  TestArrayData.cpp  TestPoint.cpp  ValueContainerTest.cpp  ValueContainerTest.hpp
test/image/: CairoImageContainerTest.cpp  CairoImageContainerTest.hpp  ChannelOffsetFilterTest.cpp  ContrastTest.cpp  ContrastTest.hpp  CopyImageTest.cpp  ImageContainerTest.cpp  LinearGradientContainerTest.cpp  MixedImageTest.cpp  testPoint.cpp
test/mpl/: ApplyBitwiseOperatorTest.cpp  FillTypeListTest.cpp  IsRelatedTest.cpp  MakeContainerTest.cpp  NumberTest.cpp  TupleFunctorTest.cpp  TupleTest.cpp  TypeListTest.cpp  TypeListTransform2Test.cpp
test/pipeline/: SimplePipelineTest.cpp
test/text/: PlainTextContainerTest.cpp  PlainTextLoaderTest.cpp  RawTextContainerTest.cpp  StringContainerTest.cpp  StringContainerTest.hpp  TextContainerTest.cpp  TextContainerTest.hpp
test/utils/: ConnectorTest.cpp  DebugStreamTest.cpp  ModuloTest.cpp  ModuloTest.hpp  UnorderedArrayTest.cpp  randomTest.cpp  typesTest.cpp
(+969 files in other folders)
